force-app/main/default/objects/Opening_Hours__c/fields/Sunday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Start_Time__c</fullName>
    <label>Sunday Start Time</label>
    <type>Time</type>
</CustomField>